--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/material-top-tabs": "^5.3.14",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
     "expo-barcode-scanner": "~9.1.0",
     "expo-linking": "~2.0.1",
@@ -20,8 +24,11 @@
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-maps": "0.27.1",
+    "react-native-pager-view": "^5.1.2",
     "react-native-reanimated": "~1.13.0",
-    "react-native-screens": "~2.15.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
+    "react-native-tab-view": "^3.0.0",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4"
