--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-tab-view": "^3.0.0",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.3.2",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
